2020-06-08 (0.1-0) Marcos Prates <marcosop@est.ufmg.br>, Victor Lachos <hlachos@uconn.edu> and Dipak Dey <dipak.dey@uconn.edu>

	* first public release
